--- a/samples/Firebase/AdMob/AdMobSample/AdMobSample-NuGet.csproj
+++ b/samples/Firebase/AdMob/AdMobSample/AdMobSample-NuGet.csproj
@@ -123,8 +123,8 @@
     <Compile Include="AdMobConstants.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
