--- a/samples/Firebase/Analytics/AnalyticsSample/AnalyticsSample-NuGet.csproj
+++ b/samples/Firebase/Analytics/AnalyticsSample/AnalyticsSample-NuGet.csproj
@@ -125,8 +125,8 @@
     <Compile Include="UserPropertyContext.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
