--- a/samples/Firebase/CloudFirestore/CloudFirestoreSample/CloudFirestoreSample-NuGet.csproj
+++ b/samples/Firebase/CloudFirestore/CloudFirestoreSample/CloudFirestoreSample-NuGet.csproj
@@ -143,8 +143,8 @@
     <Compile Include="UIAlertHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
