--- a/samples/Firebase/CloudMessaging/CloudMessagingSample/CloudMessagingSample-NuGet.csproj
+++ b/samples/Firebase/CloudMessaging/CloudMessagingSample/CloudMessagingSample-NuGet.csproj
@@ -122,8 +122,8 @@
     <Compile Include="UserInfoViewController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
