--- a/samples/Firebase/MLKit.Vision/MLKitVisionSample/MLKitVisionSample-NuGet.csproj
+++ b/samples/Firebase/MLKit.Vision/MLKitVisionSample/MLKitVisionSample-NuGet.csproj
@@ -137,8 +137,8 @@
     <Compile Include="Models\Model.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')"/>
