--- a/samples/Firebase/RemoteConfig/RemoteConfigSample/RemoteConfigSample-NuGet.csproj
+++ b/samples/Firebase/RemoteConfig/RemoteConfigSample/RemoteConfigSample-NuGet.csproj
@@ -121,8 +121,8 @@
     <Compile Include="RemoteConfigViewController.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
