--- a/samples/Firebase/Storage/StorageSample/StorageSample-NuGet.csproj
+++ b/samples/Firebase/Storage/StorageSample/StorageSample-NuGet.csproj
@@ -142,8 +142,8 @@
     <Compile Include="ImageInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistNotFoundViewController.cs" />
-    <Compile Include="../../../Shared/GoogleServiceInfoPlistHelper.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistNotFoundViewController.cs" />
+    <Compile Include="..\..\..\Shared\GoogleServiceInfoPlistHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" Condition="Exists('GoogleService-Info.plist')" />
